# rust-blog

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/posts/: blog1.md
backend/src/: lib.rs  main.rs
backend/tests/: test_emoji_parser.rs
frontend/: Cargo.toml
frontend/src/: main.rs
