[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.0"
emoji = "0.2.1"
pulldown-cmark = "0.9.3"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
